flux/apps/trackerdex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackerdex
  namespace: extra-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trackerdex
  template:
    metadata:
      labels:
        app: trackerdex
    spec:
      containers:
        - name: trackerdex
          image: ghcr.io/milouk/trackerdex:latest
          ports:
            - containerPort: 80
