flux/apps/trackerdex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trackerdex
  namespace: extra-tools
spec:
  selector:
    app: trackerdex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
