flux/apps/trackerdex/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: trackerdex
    namespace: extra-tools
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:ZtHQzYUh3rD/JxkvaolpZXbxn42o81BQMUPegFNV2+c=,iv:Nb+Z0yMdhxcbcEnfPHYt0dS/YgdpdIAFXL0mh/UlBu0=,tag:lhs99NPK2cJqGE0e8XzGKQ==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: trackerdex
              port: 80
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMd29sT3ZyMGtZVjlNbEpm
[...]
            sJ3P02xzbcGJdmq+j8yXFwGOxWbKDzbanzE0dEloGDoJ3CWVAfaZ4Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-14T13:52:12Z"
    mac: ENC[AES256_GCM,data:Bl6svIGg/1ELlt3PtRii1saG28M11Jdc3aK/2AF+e69laEUDdSqHtZ2+XoFvVAKAs9C4kxdCvpvsxgCpFCIi6IShvoGviaZOMIFgBrg7I6GIJSKvpqwRY69FSDGk0gYFLrCfGqqadbvG5OjHbEAfPm3cxfEpY0nwa/+2khPiuuc=,iv:JGL95xVYNccBCoip2kU6QSAHbcJvMwBSC7K4MtuwAT0=,tag:Ybxelci3cpUwNnWhYZdUHQ==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
